more spacing fix, added headlines box, introduced css specific to frontpage

--- a/views/style.styl
+++ b/views/style.styl
@@ -119,13 +119,5 @@ body
 				color #333
 	section
 		margin-top 20px
-
-#sidebar
-	float right
-	.container
-		margin-bottom 10px
-
-#shell .slideshow
-	width 630px
-	float left
-
+.container
+	margin-bottom 15px
